# COVENANT

./: .env.example  .gitignore  AUDIT_REPORT.md  KNOWN_LIMITATIONS.md  README.md  codex.md  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
app/: main.py  settings.py
app/api/: audit.py  documents.py  engagements.py  gates.py  pipeline.py  seal.py
app/audit/: __init__.py  canonical.py  chain_verifier.py  chain_writer.py  events.py
app/config/: ast_grammar.yaml  financial_taxonomy.yaml  llm.yaml
app/llm_providers/: __init__.py  anthropic.py  base.py  bedrock.py  factory.py  gemini.py  mock.py  mock_replay.py  openrouter.py
app/prompts/: amendment_diff_v1.md  compliance_cert_parse_v1.md  covenant_extraction_v1.md
app/schemas/: __init__.py  api.py  common.py  stage0.py  stage1.py  stage2.py  stage3.py  stage4.py  stage5.py
app/stages/: runner.py
docs/: input_preprocessing.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  demoData.ts
scripts/: prefetch_models.py  setup.py  verify_chain.py
test_inputs/firstbank/: debt_schedule_firstbank_q4_2024.xlsx  ebitda_bridge_firstbank_q4_2024.xlsx  engagement_metadata.json  trial_balance_firstbank_q4_2024.xlsx
test_inputs/nexus/: debt_schedule_nexus_q4_2024.xlsx  ebitda_bridge_nexus_q4_2024.xlsx  engagement_metadata.json
tests/: conftest.py
tests/integration/: blind_firstbank.py  blind_nexus.py  firstbank_golden.py  nexus_golden.py  test_frontend_roundtrip.py  test_stress.py
tests/unit/: test_api.py  test_chain_verifier.py  test_schemas.py  (+1 more)
(+46 files in other folders)
