[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "covenant-compliance"
version = "1.0.0"
requires-python = "==3.11.*"
description = "Private-credit covenant compliance platform"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_golden.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--tb=short -q"

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
